force-app/main/default/objects/Reseau_Transporteur__c/Reseau_Transporteur__c.object-meta.xml
<CustomObject>
    <description>Objet de jonction (n to n) entre les réseaux et les transporteurs.</description>
    <label>Association Réseau Transporteur</label>
    <nameField>
        <displayFormat>RTR-{0000}</displayFormat>
        <label>Numéro de Réseau Transporteur</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Associations Réseaux Transporteurs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>