force-app/main/default/objects/Reseau_Transporteur__c/fields/Reseau__c.field-meta.xml
<CustomField>
    <fullName>Reseau__c</fullName>
    <label>Réseau</label>
    <referenceTo>Reseau__c</referenceTo>
    <relationshipLabel>Transporteurs associés à ce réseau</relationshipLabel>
    <relationshipName>Reseau_Transporteur</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>